CHANGE javadoc